--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -37,5 +37,5 @@
   when: ansible_os_family == "RedHat"
 # mysql my.cnf
 - name: "Create my.cnf"
-  template: src=my.cnf.j2 dest='~/.my.cmf' mode=0660
+  template: src=arm-my.cnf.j2 dest='~/.my.cmf' mode=0660
   sudo: yes
