--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -34,8 +34,10 @@
     - python-boto
     - bash-completion
   sudo: yes
-  when: ansible_os_family == "RedHat"
+  when: ansible_os_family == "RedHat" and ansible_distribution_version != '6.7'
 # mysql my.cnf
 - name: "Create my.cnf"
-  template: src=arm-my.cnf.j2 dest='~/.my.cmf' mode=0660
+  template: src=arm-my.cnf.j2 dest='~/.my.cnf' mode=0660
   sudo: yes
+  #become: yes 
+  #become_user: "{{ ansible_ssh_user }}"
