drop rds specific my.cnf in home dir of ansible_ssh_user for db operations

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -39,5 +39,11 @@
 - name: "Create my.cnf"
   template: src=arm-my.cnf.j2 dest='~/.my.cnf' mode=0660
   sudo: yes
+  when: ac_flavor == 'arm'
+
+- name: "Create my.cnf"
+  template: src=my.cnf.j2 dest='~/.my.cnf' mode=0660
+  sudo: yes
+  when: ac_flavor != 'arm'
   #become: yes 
   #become_user: "{{ ansible_ssh_user }}"
